--- a/exercise/ubuntu/pod-compute-contrail-NY.yaml
+++ b/exercise/ubuntu/pod-compute-contrail-NY.yaml
@@ -1,11 +1,11 @@
 kind: Pod
 apiVersion: v1
 metadata:
-  name: ubuntu-compute-ny
+  name: ubuntu-compute-la
 spec:
   nodeSelector:
-    "kubernetes.io/hostname": compute-contrail-ny
+    "kubernetes.io/hostname": computela
   containers:
-    - name: ubuntu-compute-ny
+    - name: ubuntu-compute-la
       image: virtualhops/ato-ubuntu:latest
   restartPolicy: Never
